# kaia

./: .env.example  .gitignore  EMBEDDINGS.md  ISSUE_MULTI_REPO_INDEXING.md  README.md  SETUP.md  pyproject.toml
src/kaia/: __init__.py  cli.py  indexer.py  mcp_server.py  models.py  vector_store.py
src/kaia/data/: kaia_claude_section.md
src/kaia/extractors/: __init__.py  code_extractor.py  doc_extractor.py  git_extractor.py  pdf_extractor.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mcp_server.py
tests/unit/: test_hybrid_search.py  test_models.py  test_vector_store.py
tests/unit/extractors/: __init__.py  test_code_extractor.py  test_pdf_extractor.py
