[project]
name = "kaia"
version = "0.1.0"
description = "RAG system for Marcus codebase via MCP"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.6.0",
    "mcp>=0.9.0",
    "gitpython>=3.1.41",
    "pygments>=2.17.2",
    "markdown>=3.5.2",
    "pydantic>=2.6.1",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "torch>=2.0.0",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-markdown>=3.5.0",
]

[project.scripts]
kaia = "kaia.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Fast unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow tests (>1s)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
